<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.tadeuespindolapalermo.easyjdbc</groupId>
	<artifactId>easy-jdbc</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Easy JDBC Library</name>
	<description>Library for easy persistence with JDBC!</description>
	<url>https://github.com/tadeuespindolapalermo/EasyJDBC</url>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>

	<scm>
		<url>https://github.com/tadeuespindolapalermo/EasyJDBC</url>
		<connection>scm:git:https://github.com/tadeuespindolapalermo/EasyJDBC.git</connection>
		<developerConnection>scm:git:https://github.com/tadeuespindolapalermo/EasyJDBC.git</developerConnection>
		<tag>1.0.0-SNAPSHOT</tag>
	</scm>

	<licenses>
		<license>
			<name>GNU General Public License Version 3.0</name>
			<url>http://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>tadeuespindolapalermo</id>
			<name>Tadeu Espíndola Palermo</name>
			<email>tadeupalermoti@gmail.com</email>
			<organization>JAVA Developer</organization>
			<organizationUrl>https://github.com/tadeuespindolapalermo</organizationUrl>
			<roles>
				<role>project owner</role>
				<role>administrator</role>
				<role>developer</role>
			</roles>
			<timezone>-3</timezone>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>[4.13.1,)</junit.version>
		<postgresql.version>42.2.18</postgresql.version>
		<mysql.version>8.0.22</mysql.version>
		<sqlite.version>3.34.0</sqlite.version>
		<h2.version>1.4.200</h2.version>
		<log4j.version>1.2.17</log4j.version>
		<oracle.version>19.3.0.0</oracle.version>
		<sonar.host.url>http://localhost:9000</sonar.host.url>
		<sonar.projectKey>com.github.tadeuespindolapalermo.easyjdbc:easy-jdbc</sonar.projectKey>
		<sonar.projectName>Easy JDBC</sonar.projectName>
		<sonar.projectVersion>0.0.1-SNAPSHOT</sonar.projectVersion>
		<sonar.login>admin</sonar.login>
		<sonar.password>admin</sonar.password>
		<sonar.projectDescription>Library for easy persistence with JDBC!</sonar.projectDescription>
		<sonar.links.homepage>https://github.com/tadeuespindolapalermo/EasyJDBC</sonar.links.homepage>
		<sonar.links.scm>https://github.com/tadeuespindolapalermo/EasyJDBC</sonar.links.scm>
		<sonar.sources>src/main/java</sonar.sources>
		<sonar.tests>src/test/java</sonar.tests>
		<sonar.java.binaries>target/classes</sonar.java.binaries>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>com.oracle.ojdbc</groupId>
			<artifactId>ojdbc8</artifactId>
			<version>${oracle.version}</version>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql.version}</version>
		</dependency>

		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>${sqlite.version}</version>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${h2.version}</version>
		</dependency>

	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.6.0.1398</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<pushChanges>false</pushChanges>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
